Fixed codelists tree item height Fixed system attribute label visualization and truncation Fixed tab label height

--- a/cotrix/cotrix-web-manage/src/main/resources/org/cotrix/web/manage/client/resources/CodelistsStyle.css
+++ b/cotrix/cotrix-web-manage/src/main/resources/org/cotrix/web/manage/client/resources/CodelistsStyle.css
@@ -31,6 +31,7 @@
   padding-left: 3px;
   padding-right: 3px;
   font-size: 15px;
+  height: 18px;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -43,8 +44,7 @@
 .cellTreeTopItem {
   font-weight: normal;
   color: #5674b9 !important;
-/*  margin-top: 5px;*/
-  padding: 3px 13px 3px 10px !important;
+  padding: 2px 13px 2px 10px !important;
 }
 
 .cellTreeTopItemImage {
